MODQM-315 BE - Edit/Derive a MARC bib - Support MARC LDR_19 values 'b' and 'c' - add 'b' and 'c' to validation rule of bib's 19'th position